feat: 검색 api total페이지 구현